syntax = "proto3";

package gophkeeper;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/rycln/gokeep/pkg/gen/grpc/gophkeeper";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string salt = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string user_id = 1;
  string token = 2;
  string salt = 3;
}

message SyncRequest {
    repeated Item items = 1;
}

message SyncResponse {
    repeated Item items = 1;
}

message Item {
    string id = 1;
    string user_id = 2;
    string type = 3;
    string name = 4;
    string metadata = 5;
    bytes data = 6;
    google.protobuf.Timestamp updated_at = 7;
    bool is_deleted = 8;
}

service GophKeeper {
  rpc Register (RegisterRequest) returns (AuthResponse) {}
  rpc Login (LoginRequest) returns (AuthResponse) {}
  rpc Sync (SyncRequest) returns (SyncResponse) {}
}

